Dockerfile and pom.xml updated.